--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
     "react-native-a": "^1.0.1",
     "react-native-hyperlink": "^0.0.19",
